1. Resp封装及好友列表 2. 前端load好友列表
